--- a/_config.yml
+++ b/_config.yml
@@ -10,14 +10,7 @@ url: "https://janczizikow.github.io/" # the base hostname & protocol for your si
 
 # SEO PLUGIN
 social:
-  name: Your Name
-  links:
-    - https://twitter.com/BenBalter
-    - https://www.facebook.com/ben.balter
-    - https://www.linkedin.com/in/BenBalter
-    - https://plus.google.com/+BenBalter
-    - https://github.com/benbalter
-    - https://keybase.io/benbalter
+  name: Robert Filipkowski
 
 # THEME SETTINGS
 navigation: # Navigation links
@@ -32,12 +25,12 @@ hero_img: posts/sleek_lg.jpg # Main background image: use the path from /assets/
 
 email: your-email@domain.com # email for form submission
 
-twitter_username: jan_czizikow # replace with your_twitter_username or comment to remove link from footer
-github_username:  janczizikow # replace with your_github_username or comment to remove link from footer
-instagram_username: shanlongjj # replace with your_instagram_username or comment to remove link from footer
+#twitter_username: jan_czizikow # replace with your_twitter_username or comment to remove link from footer
+#github_username:  janczizikow # replace with your_github_username or comment to remove link from footer
+#instagram_username: shanlongjj # replace with your_instagram_username or comment to remove link from footer
 
-disqus:
-  shortname: janczizikow # to enable comments replace with your_disqus_shortname
+#disqus:
+#  shortname: janczizikow # to enable comments replace with your_disqus_shortname
 
 # google_tag_manager: GTM-XXXXXXX # Uncomment to enable GTM. Replace GTM-XXXXXXX with your GTM container ID
 
